--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 }
 
 section {
-    width: 70%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +31,10 @@ section {
 section div {
     width: fit-content;
     margin-top: 15px;
-    height: fit-content;
+    height: 1rem;
     overflow: hidden;
     outline: rgb(28, 28, 28) solid 8px;
+}
+section div img {
+    outline: red dotted .4rem;
 }
