--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ section {
     margin-inline:auto;
 }
 section div {
-    width: fit-content;
+    width: 10rem;
     margin-top: 15px;
-    height: 1rem;
+    height: 20rem;
     overflow: hidden;
     outline: rgb(28, 28, 28) solid 8px;
 }
