--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 * {
     margin:0;
     padding:0;
-
+    
+}
+:root {
+    font-size: 62.5%;
 }
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)), url("https://source.unsplash.com/random");
@@ -31,13 +34,13 @@ section {
 }
 section div {
     padding: .5rem;
-    background-color: tomato;
+    background-color: rgb(71, 203, 255);
     width: 95%;
     margin-top: 15px;
     margin-inline:auto;
     height: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     row-gap: .3rem;
     align-items: center;
     overflow: hidden;
